[gd_scene load_steps=2 format=2]

[ext_resource path="res://Game/login/LoginScreen.gd" type="Script" id=1]

[node name="LoginScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="HBoxContainer" parent="Margin"]
margin_right = 920.0
margin_bottom = 500.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftHalf" type="VBoxContainer" parent="Margin/Menu"]
margin_right = 458.0
margin_bottom = 500.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoBox" type="RichTextLabel" parent="Margin/Menu/LeftHalf"]
margin_right = 458.0
margin_bottom = 248.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Gerry's Mod
"
scroll_active = false
scroll_following = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="TabContainer" parent="Margin/Menu/LeftHalf"]
margin_top = 252.0
margin_right = 458.0
margin_bottom = 500.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Game Settings" type="HBoxContainer" parent="Margin/Menu/LeftHalf/Settings"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="text" type="RichTextLabel" parent="Margin/Menu/LeftHalf/Settings/Game Settings"]
margin_right = 223.0
margin_bottom = 212.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Game settings will go here."

[node name="ServerSettings" type="VBoxContainer" parent="Margin/Menu/LeftHalf/Settings/Game Settings"]
margin_left = 227.0
margin_right = 450.0
margin_bottom = 212.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="Margin/Menu/LeftHalf/Settings/Game Settings/ServerSettings"]
margin_right = 223.0
margin_bottom = 104.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Server choice"

[node name="serverbutton" type="OptionButton" parent="Margin/Menu/LeftHalf/Settings/Game Settings/ServerSettings"]
margin_top = 108.0
margin_right = 223.0
margin_bottom = 212.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Heroku"
flat = true
align = 1
items = [ "Heroku", null, false, 0, null, "Localhost", null, false, 1, null, "Single Player", null, false, 2, null ]
selected = 0

[node name="Visual Settings" type="HBoxContainer" parent="Margin/Menu/LeftHalf/Settings"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="text" type="RichTextLabel" parent="Margin/Menu/LeftHalf/Settings/Visual Settings"]
margin_right = 610.0
margin_bottom = 302.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Visual settings will go here.
"

[node name="RightHalf" type="VBoxContainer" parent="Margin/Menu"]
margin_left = 462.0
margin_right = 920.0
margin_bottom = 500.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="login_box" type="VBoxContainer" parent="Margin/Menu/RightHalf"]
margin_right = 458.0
margin_bottom = 164.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="username" type="LineEdit" parent="Margin/Menu/RightHalf/login_box"]
margin_right = 458.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 3
placeholder_text = "username"

[node name="password" type="LineEdit" parent="Margin/Menu/RightHalf/login_box"]
margin_top = 56.0
margin_right = 458.0
margin_bottom = 108.0
size_flags_horizontal = 3
size_flags_vertical = 3
secret = true
secret_character = "@"
placeholder_text = "password"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="login_button" type="Button" parent="Margin/Menu/RightHalf/login_box"]
margin_top = 112.0
margin_right = 458.0
margin_bottom = 164.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Login"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spacing1" type="VBoxContainer" parent="Margin/Menu/RightHalf"]
margin_top = 168.0
margin_right = 458.0
margin_bottom = 332.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PingLabel" type="RichTextLabel" parent="Margin/Menu/RightHalf/Spacing1"]
margin_right = 458.0
margin_bottom = 164.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Spacing2" type="VBoxContainer" parent="Margin/Menu/RightHalf"]
margin_top = 336.0
margin_right = 458.0
margin_bottom = 500.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ExitButton" type="Button" parent="Margin/Menu/RightHalf/Spacing2"]
margin_right = 458.0
margin_bottom = 164.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Exit"
[connection signal="item_selected" from="Margin/Menu/LeftHalf/Settings/Game Settings/ServerSettings/serverbutton" to="." method="_on_serverbutton_item_selected"]
[connection signal="pressed" from="Margin/Menu/RightHalf/login_box/login_button" to="." method="_on_login_button_pressed"]
[connection signal="pressed" from="Margin/Menu/RightHalf/Spacing2/ExitButton" to="." method="_on_ExitButton_pressed"]
